--- a/server/public/events/events.html
+++ b/server/public/events/events.html
@@ -12,6 +12,11 @@
         <div id="event-count"></div> <!-- Display count here -->
         <input type="text" id="search-input" placeholder="Search events...">
         <button id="search-btn">Search</button>
+        <select id="event-filter">
+            <option value="all">All Events</option>
+            <option value="paid">Paid Events</option>
+            <option value="free">Free Events</option>
+        </select>
     </header>
 
     <div class="event-container" id="event-container">
