--- a/server/public/sign_in/signin.html
+++ b/server/public/sign_in/signin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - College Event Management System</title>
     <link rel="stylesheet" type="text/css" href="signin_styles.css">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
     <div class="container">
@@ -18,6 +19,7 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
+            <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
             <button type="submit" class="btn">Sign In</button>
         </form>
         <p>Don't have an account? <a href="../sign_up/signup.html">Sign Up</a></p>
